prevent bottom from being cut off

--- a/src/app/styl/views/browser/list.styl
+++ b/src/app/styl/views/browser/list.styl
@@ -12,8 +12,8 @@
 .list
   font-family 'Roboto', sans-serif
   position absolute
-  height 100%
-  width 100%
+  height: calc(100% - 180px)
+  padding-bottom: 10px
   overflow: scroll
   width: calc(100% - 200px);
   left: 100px;
